Move C code to native module and integrate Java code under java21